apollo-router/tests/integration/snapshots/integration_tests__integration__demand_control__requests_exceeding_max_are_rejected@custom_costs.snap
---
source: apollo-router/tests/integration/demand_control.rs
expression: parse_result_for_snapshot(response).await
---
{
  "apollo::demand_control::actual_cost": null,
  "apollo::demand_control::actual_cost_by_subgraph": null,
  "apollo::demand_control::estimated_cost": 127.0,
  "apollo::demand_control::estimated_cost_by_subgraph": {
    "subgraphWithCost": 121.0,
    "subgraphWithListSize": 6.0
  },
  "apollo::demand_control::result": "COST_ESTIMATED_TOO_EXPENSIVE",
  "apollo::demand_control::result_by_subgraph": null,
  "apollo::demand_control::strategy": "static_estimated",
  "apollo::experimental_mock_subgraphs::subgraph_call_count": null,
  "body": {
    "errors": [
      {
        "extensions": {
          "code": "COST_ESTIMATED_TOO_EXPENSIVE",
          "cost.estimated": 127.0,
          "cost.estimated.breakdown": {
            "__cost": 0.0,
            "argWithCost": {
              "__cost": 10.0
            },
            "enumWithCost": {
              "__cost": 15.0
            },
            "fieldWithCost": {
              "__cost": 5.0
            },
            "fieldWithDynamicListSize": {
              "__cost": 1.0,
              "items": {
                "__cost": 5.0
              }
            },
            "inputWithCost": {
              "__cost": 21.0
            },
            "objectWithCost": {
              "__cost": 40.0
            },
            "scalarWithCost": {
              "__cost": 30.0
            }
          },
          "cost.max": 1.0
        },
        "message": "query estimated cost 127 exceeded configured maximum 1"
      }
    ]
  }
}
