apollo-router/tests/integration/snapshots/integration_tests__integration__demand_control__requests_exceeding_one_subgraph_cost_are_accepted@basic_fragments.snap
---
source: apollo-router/tests/integration/demand_control.rs
expression: parse_result_for_snapshot(response).await
---
{
  "apollo::demand_control::actual_cost": 0.0,
  "apollo::demand_control::actual_cost_by_subgraph": null,
  "apollo::demand_control::estimated_cost": 12.0,
  "apollo::demand_control::result": "COST_OK",
  "apollo::demand_control::strategy": "static_estimated",
  "apollo::experimental_mock_subgraphs::subgraph_call_count": null,
  "body": {
    "data": null,
    "errors": [
      {
        "extensions": {
          "code": "SUBGRAPH_COST_ESTIMATED_TOO_EXPENSIVE",
          "cost.subgraph": "products",
          "cost.subgraph.estimated": 12.0,
          "cost.subgraph.max": 1.0,
          "service": "products"
        },
        "message": "query estimated cost 12 exceeded configured maximum 1 for subgraph products",
        "path": []
      }
    ]
  }
}
